@@ -204,6 +204,17 @@ public class TransportPlugin implements Plugin<Project> {
             task.getJavaCompiler().set(javaToolchains.compilerFor(toolChainSpec -> {
               toolChainSpec.getLanguageVersion().set(platform.getJavaLanguageVersion());
             }));
+            // For Hive/Spark: pin bytecode to Java 8 (release=8) so UDF jars stay runnable on
+            // Java 8 runtimes. Trino is excluded because Trino 406+ requires Java 17 bytecode
+            // (uses sealed classes, records, etc.).
+            // Some build environments already configure the bytecode target by passing a
+            // "--release" compiler argument. Gradle forbids specifying --release through both
+            // compilerArgs and JavaCompile.release, so only set the release here when it has
+            // not already been configured externally.
+            if (!"trino".equals(platform.getName())
+                && !task.getOptions().getCompilerArgs().contains("--release")) {
+              task.getOptions().getRelease().set(8);
+            }
           });
     }
 
@@ -278,6 +289,22 @@ public class TransportPlugin implements Plugin<Project> {
       task.getJavaLauncher().set(javaToolchains.launcherFor(toolChainSpec -> {
         toolChainSpec.getLanguageVersion().set(platform.getJavaLanguageVersion());
       }));
+
+      // When the test JVM is JDK 17 (e.g. hiveTest once its toolchain bumps from 8 to 17),
+      // Hive 2.3.9's embedded HiveServer2 + DataNucleus + Derby need extra --add-opens to access
+      // internals that JDK 17 modularizes.
+      if (platform.getJavaLanguageVersion().asInt() >= 17 && !"trino".equals(platform.getName())) {
+        task.jvmArgs(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/sun.security.action=ALL-UNNAMED");
+      }
     });
   }
 
